# c_minilib_sip_ua

./: .clang-tidy  .gitignore  .gptignore  TO-DO.txt  error.txt  meson.build  meson_options.txt  tasks.py
docs/: architecture.drawio  coding-guidelines.md
src/: c_minilib_sip_ua.c  main.c  meson.build
src/event_loop/: event_loop.c  event_loop.h  event_loop_internal.h  event_loop_ptr.h  linux_poll.c  linux_poll.h  meson.build
src/event_loop/_internal/: common.h  event_loop.h  fd.h  fd_helper.h  fd_helper_hmap.h  fd_helper_vec.h  fd_vec.h  global_evl.c  meson.build  poll_fd.c  poll_fd.h  poll_fd_vec.h  socket_list.h
src/event_loop/_internal/fd/: poll_fd.c  poll_fd.h  poll_fd_vec.h
src/event_loop/poll/: meson.build  poll.h  poll_handler.h  pollfds.c  pollfds.h
src/sip/: meson.build  sip.c  sip.h
src/sip/_internal/: common.h  meson.build  sip.h  sip_request.h  sip_request_vec.h  sip_response.h  sip_response_vec.h  sip_transaction.h  sip_transaction_client_other.h  sip_transaction_list.h
src/sip_core/: meson.build  sip_core.c  sip_core.h
src/sip_core/_internal/: common.h  meson.build  sip_core.h  sip_core_listen.c  sip_core_listen.h  sip_core_listener.h  sip_core_strans.c  sip_core_strans.h  sip_core_strans_invite.h  sip_core_strans_map.c  sip_core_strans_map.h  sip_listener.h  sip_listener_list.h  sip_strans.h  sip_strans_hashmap.h
src/sip_core/_internal/sip_server_transaction/: common.h  meson.build  oldsip_server_transaction_invite_send.c  sip_server_transaction.c  sip_server_transaction.h  sip_server_transaction_invite.h  sip_server_transaction_invite_recv.c  sip_server_transaction_invite_reply.c  sip_server_transaction_invite_sm.c
src/sip_core/_internal/sip_server_transaction/_internal/: sip_server_transaction.c  sip_server_transaction.h  sip_server_transaction_invite.h  sip_server_transaction_invite_recv.c  sip_server_transaction_invite_reply.c  sip_server_transaction_invite_sm.c  sip_server_transaction_responses.h
src/sip_session/: meson.build  sip_session.c  sip_session.h
src/sip_session/_internal/: meson.build  sip_session.h  sip_session_listen.c  sip_session_listen.h
src/sip_strans/: sip_strans.h
src/sip_transp/: meson.build  sip_transp.c  sip_transp.h
src/sip_transp/_internal/: meson.build  sip_transp.h  sip_transp_listen.h
src/sip_transport/: meson.build  sip_transport.c  sip_transport.h  sip_transport_ptr.h
src/sip_transport/_internal/: common.h  meson.build  sip_transport.h  sip_transport_listen.h  sip_transport_send.h
src/socket/: meson.build  socket.c  socket.h
src/socket/_internal/: common.h  meson.build  request.h  request_queue.h  socket.h  socket_list.h  socket_vec.h  udp.h
src/socket/_internal/transp/: transp_internal.h
src/timer/: meson.build  timer.c  timer.h
src/timer/_internal/: meson.build  timer.h
src/timer_fd/: meson.build  timer_fd.c  timer_fd.h
src/timer_fd/_internal/: meson.build  timer_fd.h
src/transp/: mason.build  transp.h  udp.h
src/transp/udp/: udp.h
src/ua/: meson.build  ua.c  ua.h
src/ua/_internal/: meson.build  ua.h
src/udp/: meson.build  udp.c  udp.h
src/udp/_internal/: meson.build  udp.h  udp_listen.h
src/udp_socket/: meson.build  udp_socket.c  udp_socket.h  udp_socket_ptr.h
src/udp_socket/_internal/: common.h  meson.build  udp_socket.c  udp_socket.h  udp_socket_listen.h  udp_socket_send.h
src/utils/: buffer.h  buffer_ptr.h  common.h  csview_ptr.h  error.h  generic_ptr.h  generic_sp.h  id.h  ip.h  memory.h  meson.build  sip_msg.h  sip_status_codes.h  smart_ptr.h  socket.h  stc_wrapper.h
subprojects/: c_minilib_config.wrap  c_minilib_error.wrap  c_minilib_init.wrap  c_minilib_mock.wrap  c_minilib_sip_codec.wrap  socket99.wrap
subprojects/packagefiles/: socket99.patch
test/: common.h  meson.build  my_struct.h  simulate_request.py  simulate_response.py  test_event_loop.c  test_event_loop_fd_vec.c  test_event_loop_fdhelper_hmap.c  test_linux_pollfd.c  test_pollfd_vec.c  test_sip_core_sip_strans_invite_recv.c  test_sip_transport.c  test_socket.c  test_udp_socket.c  unity_wrapper.h
test/test_unity.d/: test_unity.c
