option('backtrace',
  type: 'boolean',
  value: false,
  description: 'Enable backtrace support in cmc_error_t'
)
option('tests',
  type: 'boolean',
  value: false,
  description: 'Build library tests'
)
option('examples',
  type: 'boolean',
  value: false,
  description: 'Build library examples'
)
